--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "next": "14.1.1",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
+    "pgpromise": "^0.1.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
